--- a/package.json
+++ b/package.json
@@ -3,22 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.29.11",
+    "@tanstack/react-query-devtools": "^4.29.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.43",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "css-loader": "^6.8.1",
+    "dayjs": "^1.11.7",
+    "eslint": "^8.47.0",
+    "formik": "^2.4.0",
+    "html-webpack-plugin": "^5.5.3",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
+    "react-icons": "^4.9.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "style-loader": "^3.3.3",
+    "styled-components": "^6.0.7",
+    "ts-loader": "^9.4.4",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "yup": "^1.2.0",
+    "zustand": "^4.3.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +59,41 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@mswjs/data": "^0.13.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "dependency-cruiser": "^13.0.5",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jest-dom": "^5.0.1",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "jsdom": "^22.1.0",
+    "msw": "^1.2.1",
+    "path": "^0.12.7",
+    "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
+    "typescript": "^5.1.6",
+    "unplugin-fonts": "^1.0.3",
+    "vite": "^4.4.9",
+    "vite-plugin-checker": "^0.6.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
